# batched_BLAS

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
